# AlphaStrat

./: .gitignore  AI Prompt.txt  CMakeLists.txt  README.md  alphastrat notes.docx  context prompt.txt
Python Backtesting/: AlphaWave prompt.txt  JS.ipynb  Stat Arb 1 text.txt  Stat Arb 1.ipynb
Python Backtesting/.ipynb_checkpoints/: Stat Arb 1-checkpoint.ipynb
Python Backtesting/Arshaq Signals/: Arshaq Trading Signals.ipynb  CME_MINI_DL_ES1!, 1-DESKTOP-FLUMNLE.csv  CME_MINI_DL_ES1!, 1.csv  SHAQ_GENERATED_SIGNALS - Copy.csv  SHAQ_GENERATED_SIGNALS.csv  TSLA_GENERATED_SIGNALS.csv  red folder news strategy.txt  test.csv
Python Backtesting/Arshaq Signals/.ipynb_checkpoints/: Arshaq Trading Signals-checkpoint.ipynb
Python Backtesting/Arshaq Signals/data/: TSLA_data.csv
Python Backtesting/Python_helper/: data_ingest.py  tele_bot.py
Python Backtesting/Statistical arbitrage/: Stat Arb 1.ipynb  spy_bars.csv  trade_log.csv
active_strats/StatArb1/: StatArb1.cpp  StatArb1.h
config/: config.json  topics.json
include/: Aggregator.h  MarketDataGateway.h  MarketDataParser.h  OrderGateway.h  OrderManagementSystem.h  TradingEngine.h  all_code.txt  initialize.h
include/Adapters/: AlpacaAdapter.h  IBKRAdapter.h
include/DTOs/: AlphaStratDTOs.h
include/MarketDataGateway/: MarketDataGateway.h  MarketDataParser.h
include/interface/: AdapterEnum.h  GenericAdapter.h
include/orderGateway/: OMS.h  Order.h
include/orderGatway/: OMS.h  Order.h
include/solace/: solaceLib.h
src/: Aggregator.cpp  MarketDataGateway.cpp  MarketDataParser.cpp  OrderGateway.cpp  OrderManagementSystem.cpp  TradingEngine.cpp  all_code.txt  combined_files.txt  main.cpp
src/Adapters/: AlpacaAdapter.cpp  IBKRAdapter.cpp
src/MarketDataGateway/: EventListener.cpp  EventListener.h  MarketDataGateway.cpp  MarketDataParser.cpp
src/interface/: GenericAdapter.cpp
src/orderGateway/: OMS.cpp  Order.cpp
src/solace/: solaceLib.cpp
src/strategy/: Strategy.cpp  Strategy.h
tests/: test_MarketDataGateway.cpp  test_OrderManagementSystem.cpp
